assignments/Parser/cool.output
Terminals unused in grammar

   ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error class

    5 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    7 optional_feature_list: /* empty */
    8                      | feature_list

    9 feature_list: feature
   10             | feature_list feature

   11 feature: OBJECTID ':' TYPEID init ';'
   12        | OBJECTID '(' optional_formal_list ')' ':' TYPEID '{' expr '}' ';'
   13        | error ';'

   14 init: /* empty */
   15     | ASSIGN expr

   16 optional_formal_list: /* empty */
   17                     | formal_list

   18 formal_list: formal
   19            | formal_list ',' formal

   20 formal: OBJECTID ':' TYPEID

   21 optional_expr_list: /* empty */
   22                   | expr_list

   23 expr_list: expr
   24          | expr_list ',' expr

   25 expr_block: expr ';'
   26           | expr_block expr ';'
   27           | error ';'

   28 case_list: case
   29          | case_list case

   30 case: OBJECTID ':' TYPEID DARROW expr ';'

   31 let: OBJECTID ':' TYPEID init IN expr
   32    | OBJECTID ':' TYPEID init ',' let
   33    | error ',' let

   34 expr: OBJECTID ASSIGN expr
   35     | expr '.' OBJECTID '(' optional_expr_list ')'
   36     | expr '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   37     | OBJECTID '(' optional_expr_list ')'
   38     | IF expr THEN expr ELSE expr FI
   39     | WHILE expr LOOP expr POOL
   40     | '{' expr_block '}'
   41     | LET let
   42     | CASE expr OF case_list ESAC
   43     | NEW TYPEID
   44     | ISVOID expr
   45     | expr '+' expr
   46     | expr '-' expr
   47     | expr '*' expr
   48     | expr '/' expr
   49     | '~' expr
   50     | expr '<' expr
   51     | expr LE expr
   52     | expr '=' expr
   53     | NOT expr
   54     | '(' expr ')'
   55     | OBJECTID
   56     | INT_CONST
   57     | STR_CONST
   58     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 12 35 36 37 54
')' (41) 12 35 36 37 54
'*' (42) 47
'+' (43) 45
',' (44) 19 24 32 33
'-' (45) 46
'.' (46) 35 36
'/' (47) 48
':' (58) 11 12 20 30 31 32
';' (59) 5 6 11 12 13 25 26 27 30
'<' (60) 50
'=' (61) 52
'@' (64) 36
'{' (123) 5 6 12 40
'}' (125) 5 6 12 40
'~' (126) 49
error (256) 4 13 27 33
CLASS (258) 5 6
ELSE (259) 38
FI (260) 38
IF (261) 38
IN (262) 31
INHERITS (263) 6
LET (264) 41
LOOP (265) 39
POOL (266) 39
THEN (267) 38
WHILE (268) 39
CASE (269) 42
ESAC (270) 42
OF (271) 42
DARROW (272) 30
NEW (273) 43
ISVOID (274) 44
STR_CONST (275) 57
INT_CONST (276) 56
BOOL_CONST (277) 58
TYPEID (278) 5 6 11 12 20 30 31 32 36 43
OBJECTID (279) 11 12 20 30 31 32 34 35 36 37 55
ASSIGN (280) 15 34
NOT (281) 53
LE (282) 51
ERROR (283)
PRECEDE (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3 4, on right: 1 3
class (49)
    on left: 5 6, on right: 2 3 4
optional_feature_list (50)
    on left: 7 8, on right: 5 6
feature_list (51)
    on left: 9 10, on right: 8 10
feature (52)
    on left: 11 12 13, on right: 9 10
init (53)
    on left: 14 15, on right: 11 31 32
optional_formal_list (54)
    on left: 16 17, on right: 12
formal_list (55)
    on left: 18 19, on right: 17 19
formal (56)
    on left: 20, on right: 18 19
optional_expr_list (57)
    on left: 21 22, on right: 35 36 37
expr_list (58)
    on left: 23 24, on right: 22 24
expr_block (59)
    on left: 25 26 27, on right: 26 40
case_list (60)
    on left: 28 29, on right: 29 42
case (61)
    on left: 30, on right: 28 29
let (62)
    on left: 31 32 33, on right: 32 33 41
expr (63)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 54 55 56 57 58, on right: 12 15 23 24 25 26 30 31 34 35 36
    38 39 42 44 45 46 47 48 49 50 51 52 53 54


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    4 class_list: error . class

    CLASS  shift, and go to state 2

    class  go to state 6


state 2

    5 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (program)

    class  go to state 9


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class_list: error class .

    $default  reduce using rule 4 (class_list)


state 7

    5 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 11

    5 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 15
    feature_list           go to state 16
    feature                go to state 17


state 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 18


state 13

   13 feature: error . ';'

    ';'  shift, and go to state 19


state 14

   11 feature: OBJECTID . ':' TYPEID init ';'
   12        | OBJECTID . '(' optional_formal_list ')' ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 20
    '('  shift, and go to state 21


state 15

    5 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 22


state 16

    8 optional_feature_list: feature_list .
   10 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 8 (optional_feature_list)

    feature  go to state 23


state 17

    9 feature_list: feature .

    $default  reduce using rule 9 (feature_list)


state 18

    6 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    '}'  reduce using rule 7 (optional_feature_list)

    optional_feature_list  go to state 24
    feature_list           go to state 16
    feature                go to state 17


state 19

   13 feature: error ';' .

    $default  reduce using rule 13 (feature)


state 20

   11 feature: OBJECTID ':' . TYPEID init ';'

    TYPEID  shift, and go to state 25


state 21

   12 feature: OBJECTID '(' . optional_formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 26

    $default  reduce using rule 16 (optional_formal_list)

    optional_formal_list  go to state 27
    formal_list           go to state 28
    formal                go to state 29


state 22

    5 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 30


state 23

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


state 24

    6 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 31


state 25

   11 feature: OBJECTID ':' TYPEID . init ';'

    ASSIGN  shift, and go to state 32

    $default  reduce using rule 14 (init)

    init  go to state 33


state 26

   20 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


state 27

   12 feature: OBJECTID '(' optional_formal_list . ')' ':' TYPEID '{' expr '}' ';'

    ')'  shift, and go to state 35


state 28

   17 optional_formal_list: formal_list .
   19 formal_list: formal_list . ',' formal

    ','  shift, and go to state 36

    $default  reduce using rule 17 (optional_formal_list)


state 29

   18 formal_list: formal .

    $default  reduce using rule 18 (formal_list)


state 30

    5 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


state 32

   15 init: ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 52


state 33

   11 feature: OBJECTID ':' TYPEID init . ';'

    ';'  shift, and go to state 53


state 34

   20 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 54


state 35

   12 feature: OBJECTID '(' optional_formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 55


state 36

   19 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 56


state 37

    6 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 6 (class)


state 38

   38 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 57


state 39

   41 expr: LET . let

    error     shift, and go to state 58
    OBJECTID  shift, and go to state 59

    let  go to state 60


state 40

   39 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 61


state 41

   42 expr: CASE . expr OF case_list ESAC

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 62


state 42

   43 expr: NEW . TYPEID

    TYPEID  shift, and go to state 63


state 43

   44 expr: ISVOID . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 64


state 44

   57 expr: STR_CONST .

    $default  reduce using rule 57 (expr)


state 45

   56 expr: INT_CONST .

    $default  reduce using rule 56 (expr)


state 46

   58 expr: BOOL_CONST .

    $default  reduce using rule 58 (expr)


state 47

   34 expr: OBJECTID . ASSIGN expr
   37     | OBJECTID . '(' optional_expr_list ')'
   55     | OBJECTID .

    ASSIGN  shift, and go to state 65
    '('     shift, and go to state 66

    $default  reduce using rule 55 (expr)


state 48

   53 expr: NOT . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 67


state 49

   49 expr: '~' . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 68


state 50

   40 expr: '{' . expr_block '}'

    error       shift, and go to state 69
    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr_block  go to state 70
    expr        go to state 71


state 51

   54 expr: '(' . expr ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 72


state 52

   15 init: ASSIGN expr .
   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 15 (init)


state 53

   11 feature: OBJECTID ':' TYPEID init ';' .

    $default  reduce using rule 11 (feature)


state 54

   20 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 20 (formal)


state 55

   12 feature: OBJECTID '(' optional_formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 82


state 56

   19 formal_list: formal_list ',' formal .

    $default  reduce using rule 19 (formal_list)


state 57

   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   38     | IF expr . THEN expr ELSE expr FI
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    THEN  shift, and go to state 83
    LE    shift, and go to state 73
    '='   shift, and go to state 74
    '<'   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 58

   33 let: error . ',' let

    ','  shift, and go to state 84


state 59

   31 let: OBJECTID . ':' TYPEID init IN expr
   32    | OBJECTID . ':' TYPEID init ',' let

    ':'  shift, and go to state 85


state 60

   41 expr: LET let .

    $default  reduce using rule 41 (expr)


state 61

   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   39     | WHILE expr . LOOP expr POOL
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    LOOP  shift, and go to state 86
    LE    shift, and go to state 73
    '='   shift, and go to state 74
    '<'   shift, and go to state 75
    '+'   shift, and go to state 76
    '-'   shift, and go to state 77
    '*'   shift, and go to state 78
    '/'   shift, and go to state 79
    '@'   shift, and go to state 80
    '.'   shift, and go to state 81


state 62

   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   42     | CASE expr . OF case_list ESAC
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    OF   shift, and go to state 87
    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81


state 63

   43 expr: NEW TYPEID .

    $default  reduce using rule 43 (expr)


state 64

   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   44     | ISVOID expr .
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 44 (expr)


state 65

   34 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 88


state 66

   37 expr: OBJECTID '(' . optional_expr_list ')'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    $default  reduce using rule 21 (optional_expr_list)

    optional_expr_list  go to state 89
    expr_list           go to state 90
    expr                go to state 91


state 67

   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr
   53     | NOT expr .

    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 53 (expr)


state 68

   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   49     | '~' expr .
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    '@'  shift, and go to state 80
    '.'  shift, and go to state 81

    $default  reduce using rule 49 (expr)


state 69

   27 expr_block: error . ';'

    ';'  shift, and go to state 92


state 70

   26 expr_block: expr_block . expr ';'
   40 expr: '{' expr_block . '}'

    IF          shift, and go to state 38
    LET         shift, and go to state 39
    WHILE       shift, and go to state 40
    CASE        shift, and go to state 41
    NEW         shift, and go to state 42
    ISVOID      shift, and go to state 43
    STR_CONST   shift, and go to state 44
    INT_CONST   shift, and go to state 45
    BOOL_CONST  shift, and go to state 46
    OBJECTID    shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '}'         shift, and go to state 93
    '('         shift, and go to state 51

    expr  go to state 94


state 71

   25 expr_block: expr . ';'
   35 expr: expr . '.' OBJECTID '(' optional_expr_list ')'
   36     | expr . '@' TYPEID '.' OBJECTID '(' optional_expr_list ')'
   45     | expr . '+' expr
   46     | expr . '-' expr
   47     | expr . '*' expr
   48     | expr . '/' expr
   50     | expr . '<' expr
   51     | expr . LE expr
   52     | expr . '=' expr

    LE   shift, and go to state 73
    '='  shift, and go to state 74
    '<'  shift, and go to state 75
    '+'  shift, and go to state 76
    '-'  shift, and go to state 77
    '*'  shift, and go to state 78
    '/'  shift, and go to state 79
    '@'  shift, and go to state 80
    '.'  shift, and go to state 81
    ';'  shift, and go to state 95
